# frida_shared

./: .gitignore  CMakeLists.txt  README.MD  build_linux.sh  build_macos.sh  build_windows.bat  builddef.py  frida-core.h  frida.def  frida_ver.py  import.c  library.c  library.h  pre_linux.py  pre_macos.py  prewindows_linux.py  prewindows_macos.py  prewindows_windows.py
devkit/linux/: build_linux_map.py  frida-core.h  frida.map
devkit/macos/: build_macos_map.py  frida.map
devkit/windows/: frida-core.h  frida.def  import.c
